Modify deb entries in gitian-linux

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -19,14 +19,8 @@ packages:
 - "faketime"
 - "bsdmainutils"
 - "ca-certificates"
-- "git-core"
-- "libc6-dev"
-- "libtool"
-- "libxml2"
-- "m4"
-- "ncurses-dev"
-- "pkg-config"
-- "python"
+- "python-dev"
+- "python-setuptools"
 - "unzip"
 - "wget"
 - "libssl-dev"
