Add python-setuptools in gitian-win

--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -19,7 +19,8 @@ packages:
 - "nsis"
 - "zip"
 - "ca-certificates"
-- "python"
+- "python-dev"
+- "python-setuptools"
 - "rename"
 - "cmake"
 remotes:
